# Traditional-RAG

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb  rag_pipeline_workflow.ipynb
src/: embedding.py  search.py
