[project]
name = "traditional-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=1.3.0",
    "faiss-cpu>=1.12.0",
    "huggingface-hub>=0.36.0",
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-groq>=0.3.8",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.11",
    "numpy>=2.0.2",
    "onnxruntime==1.16.3",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.6.1",
    "sentence-transformers==2.2.2",
    "sentencepiece>=0.2.1",
    "torch==1.13.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "typesense>=1.1.1",
]
